更新record replay
